Update header layout and styles; replace logo text with image, add navigation links, and style button

--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
   <div>
     <header>
       <div class="head-box">
-        <h4>logo</h4>
+        <img src="img\logo.svg" alt="">
       </div>
-      <div class="head-box central">
-        <h4>link link link link</h4>
-      </div>
+      <nav class="head-box central">
+        <ul class="horizontal-list">
+        <li><a href="#">link 1</a></li>
+        <li><a href="#">link 2</a></li>
+        <li><a href="#">link 3</a></li>
+        <li><a href="#">link 4</a></li>
+      </ul>
+      </nav>
       <div class="head-box">
-        login
+        <button class="accedi">Accedi</button>
       </div>
     </header>
   </div>
