Add jumbo image to main header and update styles

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </header>
   </div>
   <div class="main-head">
+    <img src="img\jumbo.png " alt="" class="jumbo">
     <div class="main-head little"></div>
   </div>
 
